More Nouns Rename UC and LC instances - need to decide on token name
